塞个博客链接引流

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 
             <div class="footer-bottom">
                 <p class="copyright">© 2025 埋按钮 (:3っ)∋ - 仅供娱乐使用</p>
+                <a href="https://www.yangdujun.top" target="_blank" rel="noopener noreferrer">能不能来看看我博客</a>
             </div>
         </footer>
     </div>
