--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
             <div class="footer-bottom">
                 <p class="copyright">© 2025 埋按钮 (:3っ)∋ - 仅供娱乐使用</p>
-                <a href="https://www.yangdujun.top" target="_blank">能不能来看看我博客</a>
+                <a href="https://www.yangdujun.top" target="_blank">能不能来看看我博客</a><br>
                 <a href="https://space.bilibili.com/7813737" target="_blank" rel="noopener noreferrer">感谢春虎Harutora提供的音频文件</a>
             </div>
         </footer>
