添加项目地址

--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
                         class="footer-link">
                         主播空间
                     </a>
+                    <a href="https://github.com/yandujun363/mai-button" target="_blank" rel="noopener noreferrer"
+                        class="footer-link">
+                        项目地址
+                    </a>
                 </div>
             </div>
 
