移除统计的注释

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
     <!-- 修改为模块化加载 -->
     <script type="module" src="app.js"></script>
-    <!-- <script type="module">
+    <script type="module">
         import AnalyticsConsent from "https://cdn.yangdujun.top/js/ac.js";
         let customEventTriggered = false
 
@@ -162,7 +162,7 @@
                 setTimeout(() => clearInterval(waitForUmami), 10000);
             }
         });
-    </script> -->
+    </script>
 </body>
 
 </html>
