--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@
     -->
     <script type="module">
         import AnalyticsConsent from "https://cdn.yangdujun.top/js/ac.js";
+        import { PingMonitor } from "https://cdn.yangdujun.top/js/ac.js"
+        const pingMonitor = new PingMonitor();
         let customEventTriggered = false
 
         document.addEventListener("DOMContentLoaded", function () {
@@ -143,6 +145,7 @@
                 const waitForUmami = setInterval(() => {
                     if (window.umami) {
                         clearInterval(waitForUmami);
+                        pingMonitor.start();
                         umami.track("consent_approved", eventData);
                     }
                 }, 100);
