按钮太多了，塞我博客导航栏了

--- a/index.html
+++ b/index.html
@@ -78,10 +78,11 @@
 
             <div class="footer-bottom">
                 <p class="copyright">© 2025 埋按钮 (:3っ)∋ - 仅供娱乐使用</p>
-                <a href="http://47.98.42.89:9000/" target="_blank">梨按钮</a><br>
+                <!-- <a href="http://47.98.42.89:9000/" target="_blank">梨按钮</a><br>
                 <a href="http://47.98.42.89:9001/" target="_blank">虎按钮</a><br>
                 <a href="http://47.98.42.89:9002/" target="_blank">羽毛球按钮</a><br>
-                <a href="http://47.98.42.89:9003/" target="_blank">虾按钮</a><br>
+                <a href="http://47.98.42.89:9003/" target="_blank">虾按钮</a><br> -->
+                <a href="https://www.yangdujun.top/" target="_blank">按钮太多了，塞我博客导航栏了</a>
                 <a href="https://www.yangdujun.top" target="_blank">能不能来看看我博客</a><br>
                 <a href="https://space.bilibili.com/7813737" target="_blank" rel="noopener noreferrer">感谢春虎Harutora提供的音频文件</a><br>
             </div>
