--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@
                         class="footer-link">
                         项目地址
                     </a>
+                    <a href="https://github.com/yandujun363/audio-button-template" target="_blank" rel="noopener noreferrer"
+                        class="footer-link">
+                        模板项目地址
+                    </a>
                 </div>
             </div>
 
